--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-prj1",
   "version": "1.0.0",
-  "description": "study css",
+  "description": "study special effects",
   "author": "Sy",
   "private": true,
   "scripts": {
